# Project808X

./: .gitignore  CMakeLists.txt  LICENSE_MIT.txt  README.md
.github/workflows/: run-unit-test-and-upload-codecov.yml
app/: CMakeLists.txt  main.cpp
docs/html/: FK_8cpp.html  FK_8cpp__incl.map  FK_8cpp__incl.md5  ForwardKinematics_8hpp.html  ForwardKinematics_8hpp__dep__incl.map  ForwardKinematics_8hpp__dep__incl.md5  ForwardKinematics_8hpp__incl.map  ForwardKinematics_8hpp__incl.md5  ForwardKinematics_8hpp_source.html  IK_8cpp.html  IK_8cpp__incl.map  IK_8cpp__incl.md5  InverseKinematics_8hpp.html  InverseKinematics_8hpp__dep__incl.map  InverseKinematics_8hpp__dep__incl.md5  InverseKinematics_8hpp__incl.map  InverseKinematics_8hpp__incl.md5  InverseKinematics_8hpp_source.html  README_8md.html  annotated.html  classa3c_1_1ForwardKinematics-members.html  classa3c_1_1ForwardKinematics.html  classa3c_1_1ForwardKinematics__coll__graph.map  classa3c_1_1ForwardKinematics__coll__graph.md5  classa3c_1_1InverseKinematics-members.html  classa3c_1_1InverseKinematics.html  classa3c_1_1InverseKinematics__coll__graph.map  classa3c_1_1InverseKinematics__coll__graph.md5  classa3c_1_1InverseKinematics_a42a17752c1fef5deb24cf7ae461437ad_icgraph.map  classa3c_1_1InverseKinematics_a42a17752c1fef5deb24cf7ae461437ad_icgraph.md5  classes.html  dir_000002_000001.html  files.html  (+33 more)
include/: ForwardKinematics.hpp  InverseKinematics.hpp  TrajectoryGeneration.hpp
libs/: CMakeLists.txt  FK.cpp  IK.cpp
results/: cppcheck  cpplint
test/: CMakeLists.txt  main.cpp  test.cpp
(+38 files in other folders)
